# echopipeline

./: .gitignore  GPU_SERVER_SETUP.md  PIPECAT_SETUP.md  api_server.py  echo_tts_colab.ipynb  inference.py  requirements.txt  samplers.py
VibeVoice/: colab_vibevoice_server.ipynb
VibeVoice/.cursor/plans/: vi-c20426e5.plan.md
VibeVoice/demo/: run_with_cloudflare.py
VibeVoice/pipecat_pipeline/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  TESTING.md  bot.py  custom_echo_tts_service.py  custom_vibevoice_tts_service.py  pcc-deploy.toml  pyproject.toml  start_server.sh  test_full_pipeline.py  test_local.py  test_local_mic.py  test_setup.sh
VibeVoice/vibevoice_server/: Dockerfile  README.md
